--- a/profile/README.adoc
+++ b/profile/README.adoc
@@ -8,6 +8,8 @@ image:https://img.shields.io/badge/fastapi-109989?style=for-the-badge&logo=FASTA
 image:https://img.shields.io/badge/kubernetes-336EE5?style=for-the-badge&logo=kubernetes&logoColor=white["Kubernetes", link:https://kubernetes.io]
 image:https://img.shields.io/badge/Apache%20Kafka-000?style=for-the-badge&logo=apachekafka["Apache Kafka", link:https://kafka.apache.org/]
 image:https://img.shields.io/badge/EdgeDB-5DC797?style=for-the-badge["EdgeDB", link:https://kafka.apache.org/]
+image:https://img.shields.io/badge/Terraform-623CE4?style=for-the-badge&logo=terraform&logoColor=white["Terraform", link:https://www.terraform.io/]
+
 
 == Overview
 
